# libtorchtest_4

./: CMakeLists.txt  README.md  main.cpp
configs/: training_parameters.yaml
libtorchtest_4/: main.cpp
